Accuracy computed on Test Set for multiple datasets

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7c4DCnQE7/F8MLdgWZT+Z",
+      "authorship_tag": "ABX9TyPUUxzlIUHlwvW8gC3qNWh5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,12 +36,12 @@
       "metadata": {
         "id": "po-GlxcIpAYb"
       },
-      "execution_count": 45,
+      "execution_count": 81,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 82,
       "metadata": {
         "id": "xqaLhvrsXytC"
       },
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "4pw7FOzTq5FE"
       },
-      "execution_count": 46,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -193,29 +193,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bceijdXIYJ_i",
-        "outputId": "d9c4c26a-ac38-4a97-9de5-ac8ab54c3e78"
+        "outputId": "887731cf-3765-4242-dfc8-be9db88ee00b"
       },
-      "execution_count": 47,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-04-06 12:54:52--  https://github.com/mnielsen/neural-networks-and-deep-learning/raw/master/data/mnist.pkl.gz\n",
-            "Resolving github.com (github.com)... 140.82.121.4\n",
-            "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
+            "--2025-04-06 13:22:05--  https://github.com/mnielsen/neural-networks-and-deep-learning/raw/master/data/mnist.pkl.gz\n",
+            "Resolving github.com (github.com)... 140.82.121.3\n",
+            "Connecting to github.com (github.com)|140.82.121.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz [following]\n",
-            "--2025-04-06 12:54:53--  https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz\n",
+            "--2025-04-06 13:22:06--  https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 17051982 (16M) [application/octet-stream]\n",
             "Saving to: ‘mnist.pkl.gz’\n",
             "\n",
-            "\rmnist.pkl.gz          0%[                    ]       0  --.-KB/s               \rmnist.pkl.gz        100%[===================>]  16.26M  --.-KB/s    in 0.09s   \n",
+            "mnist.pkl.gz        100%[===================>]  16.26M  --.-KB/s    in 0.09s   \n",
             "\n",
-            "2025-04-06 12:54:53 (183 MB/s) - ‘mnist.pkl.gz’ saved [17051982/17051982]\n",
+            "2025-04-06 13:22:06 (187 MB/s) - ‘mnist.pkl.gz’ saved [17051982/17051982]\n",
             "\n"
           ]
         }
@@ -227,7 +227,7 @@
       "metadata": {
         "id": "IBdZbdYnIaYp"
       },
-      "execution_count": 47,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -258,9 +258,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1qDiZDPkY9z8",
-        "outputId": "0255ac05-1165-4310-8059-7082826366c3"
+        "outputId": "c4f84e2e-ae31-4745-b5ae-6634de79747d"
       },
-      "execution_count": 48,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +280,7 @@
       "metadata": {
         "id": "5tmOoXc8IeNX"
       },
-      "execution_count": 49,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -293,34 +293,64 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gQGxRFfFIkHu",
-        "outputId": "05c9e282-4e08-499b-bb27-66de183eb7e6"
+        "outputId": "d4d58761-0476-4de0-9505-790681cb21c7"
       },
-      "execution_count": 50,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9054 - loss: 0.1541\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9245 - loss: 0.1258\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9336 - loss: 0.1101\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9407 - loss: 0.1010\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9420 - loss: 0.0989\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 10s  - accuracy: 0.9472 - loss: 0.0920\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9497 - loss: 0.0853\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9500 - loss: 0.0867\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9549 - loss: 0.0793\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9575 - loss: 0.0734\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9568 - loss: 0.0742\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9562 - loss: 0.0759\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9581 - loss: 0.0727\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9602 - loss: 0.0682\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9625 - loss: 0.0657\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9605 - loss: 0.0679\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9626 - loss: 0.0668\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9647 - loss: 0.0624\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9641 - loss: 0.0623\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9660 - loss: 0.0605\n"
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.8993 - loss: 0.1642\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9297 - loss: 0.1172\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9316 - loss: 0.1143\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9402 - loss: 0.1010\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9496 - loss: 0.0861\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9476 - loss: 0.0871\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9503 - loss: 0.0847\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9538 - loss: 0.0799\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9541 - loss: 0.0781\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9568 - loss: 0.0745\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9571 - loss: 0.0733\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9573 - loss: 0.0726\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9625 - loss: 0.0634\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9621 - loss: 0.0657\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9639 - loss: 0.0632\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9644 - loss: 0.0616\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9657 - loss: 0.0592\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9658 - loss: 0.0581\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9654 - loss: 0.0590\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9668 - loss: 0.0568\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_test = [x.reshape(-1, 1) for x in test_data[0]]\n",
+        "y_test = [vectorized_label(y) for y in test_data[1]]\n",
+        "testing_data_combined = list(zip(X_test, y_test))\n",
+        "\n",
+        "accuracy, avg_loss = model.evaluate(testing_data_combined)\n",
+        "print(accuracy)\n",
+        "print(avg_loss)\n"
+      ],
+      "metadata": {
+        "id": "lVA16rKLPukc",
+        "outputId": "ab91fe7c-f322-4af8-8bf8-59e21a2f5896",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9485\n",
+            "0.08820091801539971\n"
           ]
         }
       ]
@@ -337,48 +367,71 @@
         "    e[j] = 1.0\n",
         "    return e\n",
         "\n",
-        "(X_train, y_train), (X_test, y_test) = fashion_mnist.load_data()\n",
+        "(X_train_tf, y_train_tf), (X_test_tf, y_test_tf) = fashion_mnist.load_data()\n",
         "\n",
-        "X_train = [x.reshape(-1, 1) / 255.0 for x in X_train]\n",
-        "y_train = [vectorized_label(y) for y in y_train]\n",
+        "X_train_tf = [x.reshape(-1, 1) / 255.0 for x in X_train_tf]\n",
+        "y_train_tf = [vectorized_label(y) for y in y_train_tf]\n",
         "\n",
-        "X_test = [x.reshape(-1, 1) / 255.0 for x in X_test]\n",
-        "y_test = [vectorized_label(y) for y in y_test]\n",
+        "X_test_tf = [x.reshape(-1, 1) / 255.0 for x in X_test_tf]\n",
+        "y_test = [vectorized_label(y) for y in y_test_tf]\n",
         "\n",
         "model = NeuralNetwork([784, 64, 10])\n",
-        "model.fit(X_train, y_train, epochs=10, batch_size=32, learning_rate=3.0)\n"
+        "model.fit(X_train_tf, y_train_tf, epochs=10, batch_size=32, learning_rate=3.0)\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "o6JwzlVgMUMN",
-        "outputId": "8619cca5-39ce-4cdd-e502-661d7405d7df",
+        "outputId": "4770eea8-58d9-4a16-c304-687c8ac97ed1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-            "\u001b[1m29515/29515\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-            "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-            "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-            "\u001b[1m4422102/4422102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n",
-            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.7004 - loss: 0.3959\n",
-            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.7788 - loss: 0.3061\n",
-            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 18s  - accuracy: 0.7886 - loss: 0.2935\n",
-            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 16s  - accuracy: 0.7853 - loss: 0.2978\n",
-            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.8022 - loss: 0.2708\n",
-            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 18s  - accuracy: 0.8013 - loss: 0.2711\n",
-            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 16s  - accuracy: 0.8067 - loss: 0.2649\n",
-            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 16s  - accuracy: 0.8675 - loss: 0.2012\n",
-            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.8688 - loss: 0.1984\n",
-            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.8733 - loss: 0.1931\n"
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.7493 - loss: 0.3547\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.7744 - loss: 0.3132\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.7856 - loss: 0.3009\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.7882 - loss: 0.2916\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.7971 - loss: 0.2780\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.7972 - loss: 0.2803\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.8072 - loss: 0.2646\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.8101 - loss: 0.2587\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.8092 - loss: 0.2620\n",
+            "60000/60000 ━━━━━━━━━━━━━━━━━━━━ 17s  - accuracy: 0.8123 - loss: 0.2603\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "testing_data_combined = list(zip(X_test_tf, y_test))\n",
+        "\n",
+        "accuracy, avg_loss = model.evaluate(testing_data_combined)\n",
+        "print(accuracy)\n",
+        "print(avg_loss)"
+      ],
+      "metadata": {
+        "id": "-rCiJ3oHSHSd",
+        "outputId": "721d3180-c9c9-4fa4-a52f-7d74f645ead2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.7957\n",
+            "0.28854674926965623\n"
           ]
         }
       ]
