Implemented Validation Sets and Early Stopping Callbacks

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUUxzlIUHlwvW8gC3qNWh5",
+      "authorship_tag": "ABX9TyO8Lj6qIDQkrK4volWHvoW1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,12 +36,12 @@
       "metadata": {
         "id": "po-GlxcIpAYb"
       },
-      "execution_count": 81,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 4,
       "metadata": {
         "id": "xqaLhvrsXytC"
       },
@@ -148,15 +148,32 @@
         "    return (b_error, w_error)\n",
         "\n",
         "\n",
-        "  def fit(self, training_data, training_labels, epochs=20, batch_size = 10, learning_rate = 3.0):\n",
+        "  def fit(self, training_data, training_labels, validation_data=None, validation_labels=None, epochs=20, batch_size = 10, learning_rate = 3.0, callbacks=None):\n",
         "    n = len(training_data)\n",
         "    training_data_combined = list(zip(training_data, training_labels))\n",
+        "    if validation_data != None and validation_labels != None:\n",
+        "      validation_data_combined = list(zip(validation_data, validation_labels))\n",
+        "    early_stopping = None\n",
+        "    for cb in callbacks:\n",
+        "      if isinstance(cb, EarlyStopping):\n",
+        "        early_stopping = cb\n",
         "    for iteration in range(epochs):\n",
         "      start_time = time.time()\n",
         "      self.update_weights_and_biases(training_data_combined, batch_size, learning_rate)\n",
         "      accuracy, loss = self.evaluate(training_data_combined)\n",
+        "      logs = {\"accuracy\": accuracy, \"loss\": loss}\n",
         "      duration = time.time() - start_time\n",
-        "      print(f\"{n}/{n} ━━━━━━━━━━━━━━━━━━━━ {duration:.0f}s  - accuracy: {accuracy:.4f} - loss: {loss:.4f}\")\n",
+        "      if validation_data != None and validation_labels != None:\n",
+        "        val_accuracy, val_loss = self.evaluate(validation_data_combined)\n",
+        "        logs[\"val_accuracy\"] = val_accuracy\n",
+        "        logs[\"val_loss\"] = val_loss\n",
+        "        print(f\"{n}/{n} ━━━━━━━━━━━━━━━━━━━━ {duration:.0f}s  - accuracy: {accuracy:.4f} - loss: {loss:.4f} - val_accuracy: {val_accuracy:.4f} - val_loss: {val_loss:.4f}\")\n",
+        "      else:\n",
+        "        print(f\"{n}/{n} ━━━━━━━━━━━━━━━━━━━━ {duration:.0f}s  - accuracy: {accuracy:.4f} - loss: {loss:.4f}\")\n",
+        "      if early_stopping:\n",
+        "        early_stopping.on_epoch_end(iteration, logs)\n",
+        "        if early_stopping.stop_training:\n",
+        "            break\n",
         "\n",
         "\n",
         "  def evaluate(self, data):\n",
@@ -171,7 +188,36 @@
         "        total_loss += np.sum((output - y) ** 2)\n",
         "    accuracy = correct / len(data)\n",
         "    avg_loss = total_loss / len(data)\n",
-        "    return accuracy, avg_loss\n"
+        "    return accuracy, avg_loss\n",
+        "\n",
+        "\n",
+        "  def predict(self, data):\n",
+        "    predictions = []\n",
+        "    for item in data:\n",
+        "      predictions.append(self.forward_propagation(item))\n",
+        "    return predictions\n",
+        "\n",
+        "\n",
+        "class EarlyStopping:\n",
+        "  def __init__(self, monitor='val_loss', patience=0):\n",
+        "    self.patience = patience\n",
+        "    self.current_count = 0\n",
+        "    self.monitor = monitor\n",
+        "    self.best_value = None\n",
+        "    self.stop_training = False\n",
+        "\n",
+        "  def on_epoch_end(self, epoch, epoch_info):\n",
+        "    current = epoch_info.get(self.monitor)\n",
+        "    if current is None:\n",
+        "      return\n",
+        "    if self.best_value == None or current < self.best_value:\n",
+        "      self.best_value = current\n",
+        "      self.current_count = 0\n",
+        "    else:\n",
+        "      self.current_count += 1\n",
+        "      if self.current_count > self.patience:\n",
+        "        self.stop_training = True\n",
+        "\n"
       ]
     },
     {
@@ -180,7 +226,7 @@
       "metadata": {
         "id": "4pw7FOzTq5FE"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,29 +239,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bceijdXIYJ_i",
-        "outputId": "887731cf-3765-4242-dfc8-be9db88ee00b"
+        "outputId": "40632975-9df6-4f36-87c8-9b46609b5563"
       },
-      "execution_count": 83,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-04-06 13:22:05--  https://github.com/mnielsen/neural-networks-and-deep-learning/raw/master/data/mnist.pkl.gz\n",
-            "Resolving github.com (github.com)... 140.82.121.3\n",
-            "Connecting to github.com (github.com)|140.82.121.3|:443... connected.\n",
+            "--2025-04-07 15:48:30--  https://github.com/mnielsen/neural-networks-and-deep-learning/raw/master/data/mnist.pkl.gz\n",
+            "Resolving github.com (github.com)... 140.82.113.4\n",
+            "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz [following]\n",
-            "--2025-04-06 13:22:06--  https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "--2025-04-07 15:48:30--  https://raw.githubusercontent.com/mnielsen/neural-networks-and-deep-learning/master/data/mnist.pkl.gz\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.111.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 17051982 (16M) [application/octet-stream]\n",
             "Saving to: ‘mnist.pkl.gz’\n",
             "\n",
-            "mnist.pkl.gz        100%[===================>]  16.26M  --.-KB/s    in 0.09s   \n",
+            "mnist.pkl.gz        100%[===================>]  16.26M  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2025-04-06 13:22:06 (187 MB/s) - ‘mnist.pkl.gz’ saved [17051982/17051982]\n",
+            "2025-04-07 15:48:30 (138 MB/s) - ‘mnist.pkl.gz’ saved [17051982/17051982]\n",
             "\n"
           ]
         }
@@ -227,7 +273,7 @@
       "metadata": {
         "id": "IBdZbdYnIaYp"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,16 +297,19 @@
         "    return e\n",
         "\n",
         "X_train = [x.reshape(-1, 1) for x in training_data[0]]\n",
-        "y_train = [vectorized_label(y) for y in training_data[1]]"
+        "y_train = [vectorized_label(y) for y in training_data[1]]\n",
+        "\n",
+        "X_val = [x.reshape(-1, 1) for x in validation_data[0]]\n",
+        "y_val = [vectorized_label(y) for y in validation_data[1]]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1qDiZDPkY9z8",
-        "outputId": "c4f84e2e-ae31-4745-b5ae-6634de79747d"
+        "outputId": "f8d242a9-7c73-4f67-a238-17c4132b039d"
       },
-      "execution_count": 84,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,47 +329,48 @@
       "metadata": {
         "id": "5tmOoXc8IeNX"
       },
-      "execution_count": 85,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model.fit(X_train, y_train)\n"
+        "early_stopping = EarlyStopping(monitor='val_loss', patience=3)\n",
+        "model.fit(X_train, y_train, X_val, y_val, callbacks=[early_stopping])\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gQGxRFfFIkHu",
-        "outputId": "d4d58761-0476-4de0-9505-790681cb21c7"
+        "outputId": "1130b2f2-a0fa-447b-bdb5-27ad31eace58"
       },
-      "execution_count": 86,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.8993 - loss: 0.1642\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9297 - loss: 0.1172\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9316 - loss: 0.1143\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9402 - loss: 0.1010\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9496 - loss: 0.0861\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9476 - loss: 0.0871\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9503 - loss: 0.0847\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9538 - loss: 0.0799\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9541 - loss: 0.0781\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9568 - loss: 0.0745\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9571 - loss: 0.0733\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9573 - loss: 0.0726\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9625 - loss: 0.0634\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9621 - loss: 0.0657\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9639 - loss: 0.0632\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9644 - loss: 0.0616\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9657 - loss: 0.0592\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9658 - loss: 0.0581\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9654 - loss: 0.0590\n",
-            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9668 - loss: 0.0568\n"
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9055 - loss: 0.1546 - val_accuracy: 0.9136 - val_loss: 0.1445\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9252 - loss: 0.1226 - val_accuracy: 0.9315 - val_loss: 0.1167\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9322 - loss: 0.1141 - val_accuracy: 0.9338 - val_loss: 0.1097\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9417 - loss: 0.0980 - val_accuracy: 0.9385 - val_loss: 0.1010\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9387 - loss: 0.1031 - val_accuracy: 0.9365 - val_loss: 0.1061\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9447 - loss: 0.0928 - val_accuracy: 0.9406 - val_loss: 0.1012\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9498 - loss: 0.0851 - val_accuracy: 0.9437 - val_loss: 0.0944\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9528 - loss: 0.0791 - val_accuracy: 0.9466 - val_loss: 0.0883\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9533 - loss: 0.0791 - val_accuracy: 0.9476 - val_loss: 0.0908\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9549 - loss: 0.0765 - val_accuracy: 0.9465 - val_loss: 0.0900\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9575 - loss: 0.0721 - val_accuracy: 0.9463 - val_loss: 0.0885\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9581 - loss: 0.0711 - val_accuracy: 0.9477 - val_loss: 0.0880\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9571 - loss: 0.0730 - val_accuracy: 0.9463 - val_loss: 0.0901\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 8s  - accuracy: 0.9601 - loss: 0.0677 - val_accuracy: 0.9467 - val_loss: 0.0874\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9616 - loss: 0.0650 - val_accuracy: 0.9487 - val_loss: 0.0858\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9608 - loss: 0.0678 - val_accuracy: 0.9472 - val_loss: 0.0896\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9620 - loss: 0.0644 - val_accuracy: 0.9498 - val_loss: 0.0847\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9598 - loss: 0.0690 - val_accuracy: 0.9471 - val_loss: 0.0893\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9656 - loss: 0.0582 - val_accuracy: 0.9517 - val_loss: 0.0823\n",
+            "50000/50000 ━━━━━━━━━━━━━━━━━━━━ 9s  - accuracy: 0.9611 - loss: 0.0675 - val_accuracy: 0.9460 - val_loss: 0.0906\n"
           ]
         }
       ]
@@ -334,23 +384,36 @@
         "\n",
         "accuracy, avg_loss = model.evaluate(testing_data_combined)\n",
         "print(accuracy)\n",
-        "print(avg_loss)\n"
+        "print(avg_loss)\n",
+        "\n",
+        "predictions = model.predict(X_test)\n",
+        "print(predictions[0])\n"
       ],
       "metadata": {
         "id": "lVA16rKLPukc",
-        "outputId": "ab91fe7c-f322-4af8-8bf8-59e21a2f5896",
+        "outputId": "abb22a09-2930-4446-cbf3-365ccc6f24e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 87,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.9485\n",
-            "0.08820091801539971\n"
+            "0.9429\n",
+            "0.09415478334754462\n",
+            "[[1.71364994e-06]\n",
+            " [2.36814271e-08]\n",
+            " [6.89708166e-07]\n",
+            " [7.66631390e-06]\n",
+            " [6.93306109e-08]\n",
+            " [1.21063479e-08]\n",
+            " [1.71949977e-12]\n",
+            " [9.99832671e-01]\n",
+            " [5.54620956e-10]\n",
+            " [1.13528195e-04]]\n"
           ]
         }
       ]
@@ -388,7 +451,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,7 +487,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
